UV selection not visible if behind unselected UVs #57650

Closed
opened 2018-11-06 11:57:32 +01:00 by Philipp Oeser · 9 comments
Member

System Information
Fedora 29, 970m

Blender Version
Broken: a817613be5 and previous 2.8
Worked: 2.79 master

Short description of error
In 2.8 a selected UV is not visible if it is "behind" an unselected UV

Exact steps for others to reproduce the error
UVSelectionInvisible.blend

  • open attached file
  • switch to UV Edit mode in UV/Image Editor
  • looks like no UV is selected (but one is -- hit G to move it to see)
  • open file in 2.79: selection is visible there
**System Information** Fedora 29, 970m **Blender Version** Broken: a817613be5 and previous 2.8 Worked: 2.79 master **Short description of error** In 2.8 a selected UV is not visible if it is "behind" an unselected UV **Exact steps for others to reproduce the error** [UVSelectionInvisible.blend](https://archive.blender.org/developer/F5407096/UVSelectionInvisible.blend) - open attached file - switch to `UV Edit` mode in UV/Image Editor - looks like no UV is selected (but one is -- hit `G` to move it to see) - open file in 2.79: selection is visible there
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-06 11:58:20 +01:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Author
Member

@fclem: mind having a look?

@fclem: mind having a look?

Added subscribers: @WilliamReynish, @brecht

Added subscribers: @WilliamReynish, @brecht

This is because of an optimization. The only way to have correct rendering is to render everything twice. I don't know if we want this? @WilliamReynish @brecht

This is because of an optimization. The only way to have correct rendering is to render everything twice. I don't know if we want this? @WilliamReynish @brecht

I think this is relatively important, overlapping UVs are common.

Is it possible to do this in a single pass with a Z-buffer, drawing selected UVs with a higher Z value?

I think this is relatively important, overlapping UVs are common. Is it possible to do this in a single pass with a Z-buffer, drawing selected UVs with a higher Z value?

Yes it is possible. However we need to give up on Antialiasing of the points in this case (which is not really a big deal).

Yes it is possible. However we need to give up on Antialiasing of the points in this case (which is not really a big deal).

This issue was referenced by 28b06b6a05

This issue was referenced by 28b06b6a05f7e0efb307aa3f4d2d609c9162358c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#57650
No description provided.