Fix T57650 UVEdit: selection not visible if behind unselected UVs

Use depth buffer to order the uv edges correctly to always draw selected
edges on top.
We still use the double drawing workaround for points to keep the smooth
antialiased display.