source/blender/editors/space_image/space_image.c
@@ -590,18 +590,17 @@ static void image_main_region_draw(const bContext *C, ARegion *ar)
    * olg context since we now use it for drawing the entire area */
   gpu_batch_presets_reset();
 
-  /* TODO(fclem) port to draw manager and remove the depth buffer allocation. */
   GPUViewport *viewport =
       ar->draw_buffer->viewport[ar->draw_buffer->stereo ? sima->iuser.multiview_eye : 0];
   DefaultFramebufferList *fbl = GPU_viewport_framebuffer_list_get(viewport);
-  GPU_framebuffer_bind(fbl->color_only_fb);
+  GPU_framebuffer_bind(fbl->default_fb);
 
   /* XXX not supported yet, disabling for now */
   scene->r.scemode &= ~R_COMP_CROP;
 
   /* clear and setup matrix */
   UI_GetThemeColor3fv(TH_BACK, col);
-  GPU_clear_color(col[0], col[1], col[2], 0.0);
+  GPU_clear_color(col[0], col[1], col[2], 0.0f);
   GPU_clear(GPU_COLOR_BIT);
 
   image_user_refresh_scene(C, sima);
