source/blender/gpu/shaders/gpu_shader_2D_edituvs_edges_vert.glsl
@@ -19,13 +19,14 @@ flat out vec4 finalColor;
 
 void main()
 {
-  gl_Position = ModelViewProjectionMatrix * vec4(pos, 0.0, 1.0);
-
 #ifdef SMOOTH_COLOR
   bool is_select = (flag & VERT_UV_SELECT) != 0;
 #else
   bool is_select = (flag & EDGE_UV_SELECT) != 0;
 #endif
+
+  gl_Position = ModelViewProjectionMatrix * vec4(pos, 0.0, 1.0);
+  gl_Position.z = float(!is_select);
 
   finalColor = (is_select) ? selectColor : edgeColor;
 }
